Bug 984778 - Make hasFeature() and SVG requiredFeatures always return true; r=bz,longsonr

hasFeature() always returning true matches the current DOM spec.  SVG 2
has removed requiredFeatures.  Chrome has had both of these always
return true since 2014, and they seem to have had no problems.

Even requiredFeatures="" (empty string) now returns true, matching
Chrome.

MozReview-Commit-ID: 1LEu3iK4R94