dom/svg/nsSVGFeatures.cpp
@@ -21,28 +21,6 @@
 using namespace mozilla;
 
 /*static*/ bool
-nsSVGFeatures::HasFeature(nsISupports* aObject, const nsAString& aFeature)
-{
-  if (aFeature.EqualsLiteral("http://www.w3.org/TR/SVG11/feature#Script")) {
-    nsCOMPtr<nsIContent> content(do_QueryInterface(aObject));
-    if (content) {
-      nsIDocument* doc = content->GetUncomposedDoc();
-      if (doc && doc->IsResourceDoc()) {
-        // no scripting in SVG images or external resource documents
-        return false;
-      }
-    }
-    return Preferences::GetBool("javascript.enabled", false);
-  }
-#define SVG_SUPPORTED_FEATURE(str) if (aFeature.EqualsLiteral(str)) return true;
-#define SVG_UNSUPPORTED_FEATURE(str)
-#include "nsSVGFeaturesList.h"
-#undef SVG_SUPPORTED_FEATURE
-#undef SVG_UNSUPPORTED_FEATURE
-  return false;
-}
-
-/*static*/ bool
 nsSVGFeatures::HasExtension(const nsAString& aExtension, const bool aIsInChrome)
 {
 #define SVG_SUPPORTED_EXTENSION(str) if (aExtension.EqualsLiteral(str)) return true;
